Use List.of() and List.copyOf() in LocalModFile